[css-flexbox] flex-basis not animatable https://bugs.webkit.org/show_bug.cgi?id=180435 LayoutTests/imported/w3c:

<rdar://problem/59363784>

Reviewed by Antoine Quint.

* web-platform-tests/css/css-flexbox/animation/flex-basis-composition-expected.txt: Replaced FAIL expectations with PASS.
* web-platform-tests/css/css-flexbox/animation/flex-basis-interpolation-expected.txt: Ditto.
* web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt: Ditto.
* web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt: Ditto.
* web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt: Ditto.

Source/WebCore:

Reviewed by Antoine Quint.

Make flex-basis property animatable as per spec. This allows us to pass ~100 flexbox animation subtests.

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap): Mark flex-basis as animatable.

Canonical link: https://commits.webkit.org/230733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268792 268f45cc-cd09-0410-ab3c-d52691b4dbfc